client/build_debug.log

> client@0.0.0 build
> vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node:internal/process/promises:332
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/Asif/Documents/Code/Inventory Solutions/Solution AntiGravity/client): [Error] Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client\postcss.config.js

(@C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client\postcss.config.js

(@C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client\postcss.config.js)
    at load (file:///C:/Users/Asif/Documents/Code/Inventory%20Solutions/Solution%20AntiGravity/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/Asif/Documents/Code/Inventory%20Solutions/Solution%20AntiGravity/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/Asif/Documents/Code/Inventory%20Solutions/Solution%20AntiGravity/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/Asif/Documents/Code/Inventory%20Solutions/Solution%20AntiGravity/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/Asif/Documents/Code/Inventory%20Solutions/Solution%20AntiGravity/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v25.2.0
npm error Lifecycle script `build` failed with error:
npm error code 1
npm error path C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client
npm error workspace client@0.0.0
npm error location C:\Users\Asif\Documents\Code\Inventory Solutions\Solution AntiGravity\client
npm error command failed
npm error command C:\WINDOWS\system32\cmd.exe /d /s /c vite build
